--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,50 @@
 /* index.css */
 
-input {
-    font-size: 2em;
-    margin: 10px 1px 0;
+html {    
+    background-image: url('.././img/rps.jpg');
+}
+
+body,html {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+.warper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.scissor, .rock, .paper {
+    border: .4rem solid black;
+    border-radius: .5rem;
+    margin: 1rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 1rem .5rem;
+    transition: all .07s ease;
+    width: 15rem;
+    text-align: center;
+    color: white;    
+    text-shadow: 0 0 .5rem black;
+}
+
+.pick {
+    transform: scale(1.1);
+    border-color: #ffc600;
+    box-shadow: 0 0 1rem #ffc600;
+}
+
+.gameResult, .compPick, .finalStats {
+    font-weight: bold;
+    font-size: 30px;
+    color:black;
+}
+
+a {
+    text-decoration: none;
+    font-size: 30px;
 }
